--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@ body{
 
 form{
     background-color: rgba(73, 73, 73, 0.74);
-    width: 250px;
-    padding: 40px;
+    width: 300px;
+    padding: 87px 0;
+    margin: auto;
+    text-align: center;
 }
 
 .contenaire{
@@ -37,10 +39,21 @@ h1{
 }
 
 #buttonAPI{
-    background-color:rgb(124, 124, 124);
+    margin-top: 20px;
+    background-color:rgb(0, 0, 0);
+    width: 165px;
+    height: 20px;
     color: white;
-    margin-left: 40px;
+    border: solid 1px white;
     border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+}
+#property-type{
+    background-color:white;
+    width: 165px;
+    height: 20px;
+    color:rgb(124, 124, 124);
     cursor: pointer;
     font-size: 14px;
 }
