--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
     background-image: url("img/appartement.jpg");
     background-size: cover;
-    height: 700px;
     background-position: center;
     background-repeat: no-repeat;
     color: white;
-    margin:0;
+    margin: 0;
+    min-height: 100vh;
 }
 
 form{
